--- a/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj
+++ b/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj
@@ -44,6 +44,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>D:\Program Files %28x86%29\opencv\build\include;D:\Program Files %28x86%29\opencv\build\include\opencv;D:\Program Files(x86)\opencv\build\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Program Files %28x86%29\opencv\build\x86\vc10\lib;D:\Program Files(x86)\opencv\build\x86\vc10\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -72,6 +74,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opencv_contrib243.lib;opencv_core243.lib;opencv_features2d243.lib;opencv_highgui243.lib;opencv_imgproc243.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -81,6 +84,7 @@
     <ClInclude Include="ball.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="color.h" />
+    <ClInclude Include="floor.h" />
     <ClInclude Include="point.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="scenes.h" />
@@ -93,6 +97,7 @@
     <ClCompile Include="ball.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="color.cpp" />
+    <ClCompile Include="floor.cpp" />
     <ClCompile Include="_object.cpp" />
     <ClCompile Include="point.cpp" />
     <ClCompile Include="ray.cpp" />
