--- a/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj.filters
+++ b/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="vector3.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="floor.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="_object.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="floor.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
