--- a/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj.filters
+++ b/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="floor.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Triangle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="floor.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Triangle.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
