--- a/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj.filters
+++ b/tuxingxue2/tuxingxue2/tuxingxue2.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="Triangle.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="cuboid.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="poly4.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -90,6 +96,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Triangle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="cuboid.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="poly4.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
